--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~ngx-toastr/toastr.css'
+@import "~@ng-select/ng-select/themes/default.theme.css"
+
+@font-face
+    font-family: samarkan-normal
+    src: url("assets/fonts/SamarkanNormal.ttf") format("truetype")
+
+#toast-container > div
+    opacity: 1
